# SEESubscriber

./: .gitignore  Cargo.toml  LICENSE  README.md  config.yaml
.github/workflows/: release.yaml
src/: client.rs  constants.rs  data.rs  login.rs  main.rs  utils.rs
src/client/: notice_adapter.rs
src/client/notice_adapter/: adapters.rs  local_adapter.rs  sc3_adapter.rs  sct_adapter.rs
