[package]
name = "SEESubscriber"
version = "0.2.0"
edition = "2021"

[dependencies]
config = "0.14.0"
log = "0.4.22"
notify-rust = "4.11.1"
pretty_env_logger = "0.5.0"
reqwest = "0.12.7"
scraper = "0.20.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
