[package]
name = "SEESubscriber"
version = "0.3.0"
edition = "2021"

[dependencies]
base64 = "0.22.1"
chrono = "0.4.38"
config = "0.14.0"
log = "0.4.22"
notify-rust = "4.11.1"
pretty_env_logger = "0.5.0"
rand = "0.8.5"
reqwest = { version = "0.12.7", features = ["cookies", "json"] }
rsa = "0.9.6"
scraper = "0.20.0"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
thiserror = "1.0.63"
tokio = { version = "1.39.3", features = ["full"] }
